# tui4kas

./: .cursorrules  .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
core/: Cargo.toml
core/src/: analytics.rs  config.rs  lib.rs  log.rs  price.rs
core/src/rpc/: client.rs  mod.rs  polling.rs  types.rs
patches/workflow-perf-monitor/: .cargo_vcs_info.json  Cargo.toml
patches/workflow-perf-monitor/src/mem/apple/: heap.rs
src/: analytics.rs  analytics_streaming.rs  app.rs  cli.rs  config.rs  connection.rs  daemon.rs  daemon_lifecycle.rs  event.rs  keys.rs  main.rs
src/rpc/: client.rs  market.rs  mod.rs  types.rs
src/ui/: analytics.rs  blockdag.rs  command.rs  common.rs  dashboard.rs  help.rs  integrated_node.rs  mempool.rs  mining.rs  mod.rs  rpc_explorer.rs  settings.rs  statusbar.rs
tui/: Cargo.toml
tui/src/: analytics.rs  analytics_streaming.rs  app.rs  cli.rs  config.rs  connection.rs  keys.rs  main.rs
tui/src/rpc/: client.rs  market.rs  mod.rs  types.rs
tui/src/ui/: analytics.rs  contextbar.rs  dashboard.rs  mempool.rs  mining.rs  mod.rs  settings.rs
