[package]
name = "tui4kas"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "10116df" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "10116df" }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
dirs = "5"
num_cpus = "1"

# Integrated node dependencies
kaspad-lib = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "10116df", package = "kaspad" }
kaspa-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "10116df" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "10116df" }
kaspa-rpc-service = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "10116df" }
kaspa-utils = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "10116df" }
kaspa-wrpc-server = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "10116df" }
log = "0.4"
log4rs = { version = "1.2", features = ["all_components", "gzip", "background_rotation"] }

# Patch workflow-perf-monitor for macOS 15+ compatibility (opaque malloc_zone_t)
[patch.crates-io]
workflow-perf-monitor = { path = "patches/workflow-perf-monitor" }