[package]
name = "tui4kas"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "10116df" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "10116df" }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
dirs = "5"
bincode = "1"
futures = "0.3"
indexmap = { version = "2", features = ["serde"] }
num_cpus = "1"
open = "5"
