[workspace]
resolver = "2"
members = [
    "cli",
    "core",
    "tui"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["smartgoo"]
repository = "https://github.com/smartgoo/tui4kas"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
bincode = "1"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
futures = "0.3"
indexmap = { version = "2", features = ["serde"] }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "10116df" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "10116df" }
log = "0.4.29"
log4rs = "1.4.0"
num_cpus = "1"
open = "5"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tui4kas = { version = "0.1.0", path = "tui" }
tui4kas-cli = { version = "0.1.0", path = "cli" }
tui4kas-core = { version = "0.1.0", path = "core" }