[package]
name = "tui4kas-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
kaspa-rpc-core.workspace = true
kaspa-wrpc-client.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
toml.workspace = true
dirs.workspace = true
bincode.workspace = true
futures.workspace = true
indexmap.workspace = true
log.workspace = true
log4rs.workspace = true
tokio.workspace = true