[package]
name = "tui4kas"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
base64.workspace = true
bincode.workspace = true
crossterm.workspace = true
dirs.workspace = true
futures.workspace = true
indexmap.workspace = true
log.workspace = true
kaspa-rpc-core.workspace = true
kaspa-wrpc-client.workspace = true
num_cpus.workspace = true
open.workspace = true
ratatui.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tui4kas-core.workspace = true